--- a/CollegeProject/Views/Shared/_Layout.cshtml
+++ b/CollegeProject/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - OpenBanking</title>
+    <title>@ViewData["Title"] - CollegeProject</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">OpenBanking</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">CollegeProject</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -53,7 +53,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2021 - OpenBanking</p>
+            <p>&copy; 2021 - CollegeProject</p>
         </footer>
     </div>
 
