--- a/CollegeProject/Views/_ViewImports.cshtml
+++ b/CollegeProject/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using OpenBanking
-@using OpenBanking.Models
+﻿@using CollegeProject
+@using CollegeProject.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
