--- a/CollegeProject/Views/Home/Index.cshtml
+++ b/CollegeProject/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 @if (TempData["Message"] != null)
 {
     <div class="alert alert-info">
-        @TempData["Message"];
+        @TempData["Message"]
     </div>
 }
 
