--- a/CollegeProject/Views/Shared/_LoginPartial.cshtml
+++ b/CollegeProject/Views/Shared/_LoginPartial.cshtml
@@ -14,6 +14,6 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Log in", "Login", "Account", null, new { id = "login-button" })</li>
+        <li>@*@Html.ActionLink("Log in", "Login", "Account", null, new { id = "login-button" })*@</li>
     </ul>
 }
